--- a/suduko.html
+++ b/suduko.html
@@ -6,6 +6,7 @@
 		<title>sudoku</title>
 	</head>
 	<body>
+        <title>EliasMjelde|Suduko</title>
         <div class="NumbersLeft">
             <div id="1"></div>
             <div id="2"></div>
