comit ment isues

--- a/suduko.html
+++ b/suduko.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <html>
 	<head>
+	<head><meta charset="utf-8">
         
         <link rel="stylesheet" href="css.css">
 		<title>sudoku</title>
@@ -17,6 +20,7 @@
             <div id="8"></div>
             <div id="9"></div>
         </div>
+        <div id="bigBox" class="bigBox"></div>
             <div id="storBox1" class="storBox">
                 <div id="litenBox1" class="litenBox" onclick="clickDiv(this)">
                 </div>
@@ -210,6 +214,7 @@
             <button id="b8" onclick="clickButton(this)" class="button">8</button>
             <button id="b9" onclick="clickButton(this)" class="button">9</button>
         </div>
+    </div>
         <script src="js.js"></script>
 	</body>
 </html>
