comit ment isues2 electrick boogalo

--- a/suduko.html
+++ b/suduko.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        
+        <link rel="icon" type="image/x-icon" href="imgs\sudoku.png">
         <link rel="stylesheet" href="css.css">
 		<title>sudoku</title>
 	</head>
@@ -18,7 +18,7 @@
             <div id="8"></div>
             <div id="9"></div>
         </div>
-		<div class="bigBox">
+		<div class="bigBox">    
             <div id="storBox1" class="storBox">
                 <div id="litenBox1" class="litenBox" onclick="clickDiv(this)">
                 </div>
