fikset lit av home page

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Portfolio</title>
-
+    <script src="JS/MainPage.JS"></script>
 </head>
 <body>
-    <div class="TopNav">
+    <div class="LeftNav" id="LeftNav">
+        <div class="hamburger" onclick="hamburgerMenuClick()">
+            <div class="bar" id="bar1"></div>
+            <div class="bar" id="bar2"></div>
+            <div class="bar" id="bar3"></div>
+        </div>
         <div class="Links">
             <div class="BannerButton"><a href="https://www.youtube.com/">youtube</a></div>
             <div class="BannerButton"><a href="https://www.github.com">Test</a></div>
             <div class="BannerButton"><a href="https://www.github.com">Test</a></div>
         </div>
     </div>
-	<h1> Elias MJelde</h1>
-    <img src="https://placehold.co/250x250.png">
+    <div class="centerIsland">
+        <h1 class="header">Hi im [Elias]</h1>
+    </div>
 
 </body>
 </html>
