Penis i min rompe

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
             <div class="bar" id="bar2"></div>
             <div class="bar" id="bar3"></div>
         </div>
-        <div class="Links">
-            <div class="BannerButton"><a href="https://www.youtube.com/">youtube</a></div>
-            <div class="BannerButton"><a href="https://www.github.com">Test</a></div>
-            <div class="BannerButton"><a href="https://www.github.com">Test</a></div>
+        <div class="Links" id="Links">
         </div>
     </div>
     <div class="centerIsland">
